PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2012, PHP 5.4.9

- Core:
  . Fixed bug #63305 (zend_mm_heap corrupted with traits). (Dmitry, Laruence)

- Curl:
  . Fixed bug #63363 (Curl silently accepts boolean true for SSL_VERIFYHOST).
    Patch by John Jawed GitHub PR #221 (Anthony)

- Fileinfo:
  . Fixed bug #63248 (Load multiple magic files from a directory under Windows).
    (Anatoliy)

- OCI8:
  . Fixed bug #63265 (Add ORA-00028 to the PHP_OCI_HANDLE_ERROR macro)
    (Chris Jones)

- PCRE:
  . Fixed bug #63055 (Segfault in zend_gc with SF2 testsuite).
    (Dmitry, Laruence)
  . Fixed bug #63284 (Upgrade PCRE to 8.31). (Anatoliy)

- Phar:
  . Fixed bug #63297 (Phar fails to write an openssl based signature).
    (Anatoliy)

18 Oct 2012, PHP 5.4.8

- CLI server:
  . Implemented FR #63242 (Default error page in PHP built-in web server uses 
    outdated html/css). (pascal.chevrel@free.fr)
  . Changed response to unknown HTTP method to 501 according to RFC.
    (Niklas Lindgren).
  . Support HTTP PATCH method. Patch by Niklas Lindgren, GitHub PR #190.
    (Lars)

- Core:
  . Fixed bug #63219 (Segfault when aliasing trait method when autoloader
    throws excpetion). (Laruence)
  . Added optional second argument for assert() to specify custom message. Patch
    by Lonny Kapelushnik (lonny@lonnylot.com). (Lars)
  . Support building PHP with the native client toolchain. (Stuart Langley)
  . Added --offline option for tests. (Remi)
  . Fixed bug #63162 (parse_url does not match password component). (husman)
  . Fixed bug #63111 (is_callable() lies for abstract static method). (Dmitry)
  . Fixed bug #63093 (Segfault while load extension failed in zts-build).
    (Laruence)
  . Fixed bug #62976 (Notice: could not be converted to int when comparing
    some builtin classes). (Laruence)